Minor Changes. Now a platform visible on the screen.